--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ ete3==3.1.2
 Owlready2==0.36
 argparse~=1.4.0
 pandas~=1.4.1
-text2term==1.1.1
-setuptools~=60.9.3
+text2term~=1.2.1
+setuptools~=66.0.0
